turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:6: error: Missing closing brace `}' assumed here
}
^LangtonsAnt:8: error: expected class or object definition
def step() {
^