turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c:couleur){
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	
}

def step() {
if (getcouleur()==Color.black){
	setCouleurSol(color.white);
	gauche();
	avance();
else if (getcouleur()==Color.white){
	setCouleurSol(color.black);
	gauche();
	avance();


	
}
}
